--- a/style.css
+++ b/style.css
@@ -312,3 +312,43 @@ table, tr, td{
     transform: rotateY(180deg);
 
 }
+.popup {
+    position: fixed;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+    margin: auto;
+    width: 600px;
+    height:550px;
+    padding:15px;
+    border: solid 2px chartreuse;
+    background-color: indigo;
+    color: white;
+    border-radius: 10px;
+    display: none;
+}
+.popup_int{
+    display: flex;
+    flex-direction: column;
+}
+.fechar_popup{
+    display: flex;
+    justify-content: space-between;
+}
+.conteudo_popup{
+ 
+}
+.btn_fechar_popup{
+    height: 20px;
+    width: 20px;
+    background-color: chocolate;
+    color: black;
+    line-height: 20px;
+    text-align: center;
+    border:1px solid black;
+    border-radius: 15px;
+}
+.titulo_regras_do_jogo{
+    color: chartreuse;
+    font-size: 30px;
+
+}
